# SmtpClient-for-Qt

./: .gitignore  CMakeLists.txt
demos/: CMakeLists.txt
src/: CMakeLists.txt  smtpmime_global.h
test/: CMakeLists.txt
